--- a/package.json
+++ b/package.json
@@ -7,5 +7,26 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "@leongaban",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "del": "^1.1.1",
+    "event-stream": "^3.3.0",
+    "gulp": "^3.8.11",
+    "gulp-angular-templatecache": "^1.7.0",
+    "gulp-cachebust": "0.0.5",
+    "gulp-concat": "^2.5.2",
+    "gulp-html-replace": "^1.5.1",
+    "gulp-if": "^1.2.5",
+    "gulp-ruby-sass": "^1.0.0-alpha.3",
+    "gulp-sourcemaps": "^1.5.0",
+    "gulp-strip-debug": "^1.0.2",
+    "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.6",
+    "run-sequence": "^1.0.2",
+    "streamqueue": "^0.1.3"
+  },
+  "dependencies": {
+    "es6-shim": "^0.30.0",
+    "lodash": "^3.9.1"
+  }
 }
